@@ -5,15 +5,11 @@
 # https://puppet.com/docs/pe/2018.1/overview/getting_support_for_pe.html
 # ------------------------------------------------------------------------------
 # Release       Puppet   Ruby   EOL
-# SIMP 6.2      4.10     2.1.9  TBD
-# PE 2016.4     4.10     2.1.9  2018-12-31 (LTS)
-# PE 2017.3     5.3      2.4.4  2018-12-31
-# SIMP 6.3      5.5      2.4.4  TBD***
-# PE 2018.1     5.5      2.4.4  2020-05 (LTS)***
+# SIMP 6.3      5.5.10   2.4.5  TBD***
+# PE 2018.1.7   5.5.10   2.4.5  2020-05 (LTS)***
 # PE 2019.0     6.0      2.5.1  2019-08-31^^^
 #
 # *** = Modules created for SIMP 6.3+ are not required to support Puppet < 5.5
-# ^^^ = SIMP doesn't support 6 yet; tests are info-only and allowed to fail
 
 ---
 language: ruby
@@ -44,14 +40,11 @@ global:
   - STRICT_VARIABLES=yes
 
 jobs:
-  allow_failures:
-    - name: 'Latest Puppet 6.x (allowed to fail)'
-
   include:
     - stage: check
       name: 'Syntax, style, and validation checks'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5"
+      rvm: 2.4.5
+      env: PUPPET_VERSION="~> 5.5"
       script:
         - bundle exec rake check:dot_underscore
         - bundle exec rake check:test_file
@@ -63,52 +56,32 @@ jobs:
         - bundle exec puppet module build
 
     - stage: spec
-      name: 'Puppet 4.10 (SIMP 6.2, PE 2016.4)'
-      rvm: 2.1.9
-      env: PUPPET_VERSION="~> 4.10.0"
+      rvm: 2.4.5
+      name: 'Puppet 5.5.10 (SIMP 6.3, PE 2018.1)'
+      env: PUPPET_VERSION="5.5.10"
       script:
-        - bundle exec rake spec
+        - bundle exec rake spec_parallel
 
     - stage: spec
-      name: 'Puppet 5.3 (PE 2017.3)'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5.3.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      rvm: 2.4.4
-      name: 'Puppet 5.5 (SIMP 6.3, PE 2018.1)'
-      env: PUPPET_VERSION="~> 5.5.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      name: 'Latest Puppet 5.x'
-      rvm: 2.4.4
-      env: PUPPET_VERSION="~> 5.0"
-      script:
-        - bundle exec rake spec
-
-    - stage: spec
-      name: 'Latest Puppet 6.x (allowed to fail)'
+      name: 'Latest Puppet 6.x'
       rvm: 2.5.1
-      env: PUPPET_VERSION="~> 6.0"
+      env: PUPPET_VERSION="~> 6"
       script:
-        - bundle exec rake spec
+        - bundle exec rake spec_parallel
 
+    # Uncomment the following for deployment tasks and set 'secure' in both
+    # sections appropriately
     - stage: deploy
-      rvm: 2.4.4
+      rvm: 2.4.5
       script:
         - true
       before_deploy:
         - "export PUPMOD_METADATA_VERSION=`ruby -r json -e \"puts JSON.parse(File.read('metadata.json')).fetch('version')\"`"
         - '[[ $TRAVIS_TAG =~ ^simp-${PUPMOD_METADATA_VERSION}$|^${PUPMOD_METADATA_VERSION}$ ]]'
-
       deploy:
         - provider: releases
           api_key:
-              secure: "YQcvfth/9gmKSb6MBz6dc9Lu/BttX9bmPtnjU+UOuaBIjkkkrzPxUrupWlmFrtVz0KxKi12oUl+2f4EkRcnenvRTwbIreZQ1TynaOt8t7GOh8RhF4/qikAYAy4hyuy4k7foKKsqyJEfKvCG9ChDw2kS2FA6Horsg0GHGpxp93sG0mzJE/g1pCZYIzJCQvKcNZud+ALpg0mR85Z1eaEVGfb6xRvjljJITznh+NlvtsnYwTGwbNnMXbjbBBpgv3oyP63RL0R30pjrNkVgtACJAhiQll0Km7rAxPxtys7WqlysodPGs1VF/mP/PJWWnJFD9AN2VdnlXYDArEywpD09EbAyKihiB1JqbbIJrRwv6919LPa4C7Q9pKgh4RIx6XrGy+jqFAdIAqzyd5HJ580Pl9E2bHJCl3EJKL5MD6UAmPhRXC2TNPHT749avvqoSPBCAr3bYp34cWIuUicoBXwaCLDey1IAPsnMkfVF3V8LFSh+p1WDHm6hSEFIctcefKgQaD28XP38yvQ6wxneFT8GuNALADSXOCi89bDy5OBXfEPywP8mJR3TbvE7FLmlInOyr9gaJLwEdKjZ+FfV/GOXxV/UvoIYeP03w8/BT55FWAX4v+O+esYpE0qi2YFk9BJHxRi8l7pljCsmz+omyxXc8N2QN9QC6lOLRT4pc56yvnic="
+            secure: "CHANGE_SECURE"
           skip_cleanup: true
           on:
             tags: true
@@ -116,7 +89,7 @@ jobs:
         - provider: puppetforge
           user: simp
           password:
-              secure: "vboFVqPZoeV4nxdXntwf9OgiNUIBHvgJoWlnycL8IpBdoohX3EUmq9/S3dPX8e9GyG2Kvq3obqUqlYS3IrZ2r0pmB+JGhK7sadixyPa5D1C+8GS0e/qgTHZSL7Rn5OtcHFf7qOq5AXFAbxbLPGlxlKLajXtN3c1nFSXZgCE7IM13haUb8DIBxBzHTVc6+peadrGxcgjTishhJVeRllfbfYp9+DLh5VuN5xL0clUDYLRvMSXQXFPXmttR6OU3lIy6sR4t51SGkBfVtdXDppjHufOn6DsCGG64XFNvGFF03Mij9yU26mO4wY1ku8UgA6gNZeJ3jlEz35yKEiHL9nWXcFq15Jnot9AQ+L2SqtpZZU9nbEZ4H2Bx87VMAv9wKEMtVztrzYmUoZ/v/GGq/AIxsC12OG0tEekA5uh5YB4udkaPgRxJNwCZxqe86vC/dGXUBukfhVdqZemEcubLa8xopyOKBAF+jz/qfpspo4pTYvWB1/TSSuAmcUu7fzv8aqP/x0EQ9KycWzkyi9BhOS2jgNTIufRSTFgMqKt5I+s2tfI5Qgi9CThmItn4kPeFlKWCKupugY0MkIB9RNV6yB2VlvN10Q7hHr33A+SAez0TIftZuR4Q3jgHT2OI5AAdJAiV7FRYaf0WFBAUawP1ruLa9XMkRC5ZfJcSrZPwe2Rkg8A="
+            secure: "CHANGE_PASSWORD"
           on:
             tags: true
             condition: '($SKIP_FORGE_PUBLISH != true)'
