@@ -1,6 +1,6 @@
 {
   "name": "simp-upstart",
-  "version": "6.0.4",
+  "version": "6.0.5",
   "author": "SIMP Team",
   "summary": "A SIMP puppet module for managing upstart",
   "license": "Apache-2.0",
