@@ -1,3 +1,6 @@
+* Tue Apr 23 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 6.0.5-0
+- Updated .travis.yml, .gitlab-ci.yml, .ruby-version
+
 * Tue Feb 12 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 6.0.4-0
 - Use Simplib::Umask data type in lieu of validate_umask(),
   a deprecated simplib Puppet 3 function.
